Update header text in index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="wrapper-header-banner-section">
      <h1>My Name is Hamza Ali</h1>
      <br>
-     <h1>Building Safer Workplaces <br> Every Day</h1>
+     <h1>HSE Professional</h1>
     </div>
     <div class="wrapper-container-img-des-main">
      <div class="wrapper-image-container">
